🐛 Fix footer dark mode

--- a/css/docs.css
+++ b/css/docs.css
@@ -306,7 +306,6 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) {
   padding: 30px 0;
   margin-top: 70px;
   border-top: 1px solid #e5e5e5;
-  background-color: #f5f5f5;
 }
 .footer p {
   margin-bottom: 0;
